<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HeroInfo">


    <TextView
        android:id="@+id/txtArm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtAtt"
        android:layout_marginStart="10sp"
        android:layout_marginTop="20sp"
        android:layout_toEndOf="@+id/imgAtt"
        android:text="" />

    <TextView
        android:id="@+id/txtSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtArm"
        android:layout_marginStart="10sp"
        android:layout_marginTop="20sp"
        android:layout_toEndOf="@+id/imgAtt"
        android:text="" />

    <ImageView
        android:id="@+id/imgSpeed"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_below="@+id/imgArm"
        android:layout_marginStart="20sp"
        android:layout_marginTop="10sp"
        android:layout_toEndOf="@+id/text_strength"
        app:srcCompat="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/speed_icon" />

    <ImageView
        android:id="@+id/imgArm"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_below="@+id/imgAtt"
        android:layout_marginStart="20sp"
        android:layout_marginTop="10sp"
        android:layout_toEndOf="@+id/text_strength"
        app:srcCompat="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/armor_icon" />

    <ImageView
        android:id="@+id/img_ava"
        android:layout_width="150sp"
        android:layout_height="90sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/hero_image" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="20sp"
        android:layout_toEndOf="@+id/img_ava"
        android:text=""
        android:textColor="#000000"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/text_roles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_name"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="20sp"
        android:layout_toEndOf="@+id/img_ava"
        android:alpha="0.6"
        android:text=""
        android:textColor="#000000" />

    <ImageView
        android:id="@+id/img_strength"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_below="@+id/img_ava"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10sp"
        android:layout_marginTop="15sp"
        app:srcCompat="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/strength_icon" />

    <TextView
        android:id="@+id/text_strength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_ava"
        android:layout_marginStart="10sp"
        android:layout_marginTop="20sp"
        android:layout_toEndOf="@+id/img_strength"
        android:text="" />

    <ImageView
        android:id="@+id/imgAgi"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_below="@+id/img_strength"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        app:srcCompat="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/agillity_icon" />

    <ImageView
        android:id="@+id/imgInt"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_below="@+id/imgAgi"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        app:srcCompat="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/intelligent_icon" />

    <TextView
        android:id="@+id/txtAgi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_strength"
        android:layout_marginStart="10sp"
        android:layout_marginTop="20sp"
        android:layout_toEndOf="@+id/imgAgi"
        android:text="" />

    <TextView
        android:id="@+id/txtInt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtAgi"
        android:layout_marginStart="10sp"
        android:layout_marginTop="20sp"
        android:layout_toEndOf="@+id/imgInt"
        android:text="" />

    <ImageView
        android:id="@+id/imgAtt"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_below="@+id/img_ava"
        android:layout_marginStart="20sp"
        android:layout_marginTop="15sp"
        android:layout_toEndOf="@+id/text_strength"
        app:srcCompat="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/attack_icon" />

    <TextView
        android:id="@+id/txtAtt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_ava"
        android:layout_marginStart="10sp"
        android:layout_marginTop="20sp"
        android:layout_toEndOf="@+id/imgAtt"
        android:text="" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerAbilityList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgInt"
        android:layout_marginTop="10sp" />

</RelativeLayout>